fix missing { from #23330

--- a/ghost/i18n/locales/ar/portal.json
+++ b/ghost/i18n/locales/ar/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "رسائل البريد الإلكتروني",
     "Emails disabled": "تم تعطيل جميع رسائل البريد الإلكتروني",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "أدخل عنوان بريدك الإلكتروني",
     "Enter your name": "أدخل اسمك",
     "Error": "خطأ",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "فشل في تحديث إعدادات النشرة الإخبارية",
     "Failed to update subscription, please try again": "فشل في تحديث الاشتراك، يرجى المحاولة مرة أخرى",
     "Forever": "إلى الأبد",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "احصل على مساعدة",
     "Get in touch for help": "تواصل للحصول على مساعدة",
     "Get notified when someone replies to your comment": "احصل على اشعار عندما يتم الرد على تعليقك",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "!شكرًا لك على دعمك",
     "Thanks for the feedback!": "شكرا لمشاركتك رأيك!",
     "That didn't go to plan": "لم تسر الامور على ما يرام",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "",
     "There was an error cancelling your subscription, please try again.": ".حدث خطأ أثناء إلغاء الاشتراك، يرجى المحاولة مرة أخرى",
     "There was an error continuing your subscription, please try again.": ".حدث خطأ أثناء الاشتراك، يرجى المحاولة مرة أخرى",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": ".ساعة {number} محاولات تسجيل الدخول متعددة جدًا، حاول مرة أخري بعد ",
     "Too many different sign-in attempts, try again in {number} minutes": ".دقيقة {number} محاولات تسجيل الدخول متعددة جدًا، حاول مرة أخري بعد ",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "غير قادر على بدء جلسة الدفع",
     "Unlock access to all newsletters by becoming a paid subscriber.": ".افتح الوصول إلي جميع النشرات الإخبارية من خلال الاشتراك المدفوع",
     "Unsubscribe from all emails": "إلغاء الاشتراك من جميع الالكترونية",
