--- a/ghost/i18n/locales/de-CH/ghost.json
+++ b/ghost/i18n/locales/de-CH/ghost.json
@@ -10,8 +10,8 @@
     "Confirm email address": "Bestätigen Sie Ihre E-Mail-Adresse.",
     "Confirm signup": "Bestätigen Sie Ihre Registrierung.",
     "Confirm your email address": "Bestätigen Sie Ihre E-Mail-Adresse.",
-    "Confirm your email update for {siteTitle}!": "Bestätigen Sie die Änderung Ihrer E-Mail-Adresse.",
-    "Confirm your subscription to {siteTitle}": "Bestätigen Sie Ihr Abo.",
+    "Confirm your email update for {siteTitle}!": "Bestätigen Sie die Änderung Ihrer E-Mail-Adresse für {siteTitle}.",
+    "Confirm your subscription to {siteTitle}": "Bestätigen Sie Ihr Abo bei {siteTitle}.",
     "Device:": "",
     "Email": "E-Mail",
     "For security verification, enter the code below to sign in to {siteTitle}:": "",
