--- a/ghost/i18n/locales/de-CH/portal.json
+++ b/ghost/i18n/locales/de-CH/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "E-Mail-Einstellungen aktualisiert.",
     "Emails": "E-Mails",
     "Emails disabled": "E-Mails deaktiviert",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Geben Sie Ihre E-Mail-Adresse ein",
     "Enter your name": "Geben Sie Ihren Namen ein",
     "Error": "Fehler",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Newsletter-Einstellungen konnten nicht aktualisiert werden",
     "Failed to update subscription, please try again": "Abonnement konnte nicht aktualisiert werden. Bitte versuchen Sie es erneut",
     "Forever": "Für immer",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Hilfe erhalten",
     "Get in touch for help": "Kontaktiere uns für Unterstützung",
     "Get notified when someone replies to your comment": "Erhalten Sie eine Benachrichtigung, wenn jemand auf Ihren Kommentar antwortet",
@@ -105,7 +105,7 @@
     "Manage": "Verwalten",
     "Maybe later": "Vielleicht später",
     "Memberships from this email domain are currently restricted.": "Abonnements von Ihrer E-Mail-Domäne aus sind momentan eingeschränkt.",
-    "Memberships unavailable, contact the owner for access.": "Keine Abonnements verfügbar, bitte wenden Sie sich an {supportAddress}, um einen Zugang anzufragen.",
+    "Memberships unavailable, contact the owner for access.": "Keine Abonnements verfügbar, bitte wenden Sie sich an den Eigentümer, um einen Zugang anzufragen.",
     "month": "Monat",
     "Monthly": "Monatlich",
     "More like this": "Mehr davon",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Vielen Dank für Ihre Unterstützung!",
     "Thanks for the feedback!": "Danke für das Feedback!",
     "That didn't go to plan": "Entschuldigung, da ist etwas schief gelaufen.",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Bei der Übermittlung Ihres Feedbacks ist ein Problem aufgetreten. Bitte versuchen Sie es später nochmal.",
     "There was an error cancelling your subscription, please try again.": "Bei der Kündigung Ihres Abos ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
     "There was an error continuing your subscription, please try again.": "Bei der Verlängerung Ihres Abos ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
@@ -180,19 +180,19 @@
     "Too many different sign-in attempts, try again in {number} hours": "Zu viele verschiedene Anmeldeversuche. Versuchen Sie es in {number} Stunden erneut.",
     "Too many different sign-in attempts, try again in {number} minutes": "Zu viele verschiedene Anmeldeversuche. Versuchen Sie es in {number} Minuten erneut.",
     "Too many sign-up attempts, try again later": "Zu viele Anmeldeversuche. Versuchen Sie es später erneut.",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Zahlungsabwicklung konnte nicht gestartet werden",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Schalten Sie mit einem Abo den Zugang zu allen Newslettern frei.",
     "Unsubscribe from all emails": "Von allen E-Mails abmelden",
     "Unsubscribed": "Abgemeldet",
     "Unsubscribed from all emails.": "Von allen E-Mails abgemeldet.",
-    "Unsubscribing from emails will not cancel your paid subscription to {title}": "Wenn Sie sich von diesen E-Mails abmelden, bleibt Ihr bezahltes Abo bestehen. Falls Sie Ihr Abo kündigen möchten, besuchen Sie Ihre Kontoeinstellungen.",
+    "Unsubscribing from emails will not cancel your paid subscription to {title}": "Wenn Sie sich von diesen E-Mails abmelden, bleibt Ihr bezahltes Abo bei {title} bestehen.",
     "Update": "Aktualisieren",
     "Update your preferences": "Einstellungen aktualisieren",
     "Verification link sent, check your inbox": "Bestätigungslink gesendet, prüfen Sie Ihren Posteingang",
     "Verify your email address is correct": "Überprüfen Sie bitte, ob Ihre E-Mail-Adresse korrekt ist.",
     "View plans": "Tarife ansehen",
-    "We couldn't unsubscribe you as the email address was not found. Please contact the site owner.": "Da ist etwas schief gelaufen, wir konnten Sie nicht abmelden. Bitte kontaktieren Sie {supportAddress}.",
+    "We couldn't unsubscribe you as the email address was not found. Please contact the site owner.": "Da ist etwas schief gelaufen, wir konnten Sie nicht abmelden. Bitte kontaktieren Sie den Eigentümer.",
     "Welcome back, {name}!": "Willkommen zurück, {name}!",
     "Welcome back!": "Willkommen zurück!",
     "Welcome to {siteTitle}": "Willkommen bei {siteTitle}",
