--- a/ghost/i18n/locales/fr/portal.json
+++ b/ghost/i18n/locales/fr/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "E-mails",
     "Emails disabled": "E-mails désactivés",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Saisissez votre adresse e-mail",
     "Enter your name": "Saisissez votre nom",
     "Error": "Erreur",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "La mise à jour des paramètres de la newletter a échoué",
     "Failed to update subscription, please try again": "La mise à jour de l'abonnement a échoué, veuillez réessayer",
     "Forever": "Permanent",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Obtenir de l’aide",
     "Get in touch for help": "Écrivez pour obtenir de l'aide",
     "Get notified when someone replies to your comment": "Recevez une notification lorsque quelqu’un répond à votre commentaire",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Merci pour votre soutien !",
     "Thanks for the feedback!": "Merci pour votre retour !",
     "That didn't go to plan": "Cela n’a pas fonctionné comme prévu",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Un problème est survenu lors de la soumission de votre commentaire. Veuillez réessayer un peu plus tard.",
     "There was an error cancelling your subscription, please try again.": "Une erreur s'est produite lors de l'annulation de votre abonnement, veuillez réessayer.",
     "There was an error continuing your subscription, please try again.": "Une erreur s'est produite lors de la prolongation de votre abonnement, veuillez réessayer.",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "Trop de tentatives de connexion différentes, réessayez dans {number} heures",
     "Too many different sign-in attempts, try again in {number} minutes": "Trop de tentatives de connexion différentes, réessayez dans {number} minutes",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Impossible d'initier une session de paiement",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Débloquez l'accès à toutes les newsletters en souscrivant un abonnement payant.",
     "Unsubscribe from all emails": "Se désabonner de tous les e-mails",
