--- a/ghost/i18n/locales/hr/portal.json
+++ b/ghost/i18n/locales/hr/portal.json
@@ -4,7 +4,7 @@
     "{amount} off": "Snižena cijena {amount}",
     "{amount} off for first {number} months.": "Snižena cijena {amount} za prvih {number} mjeseci",
     "{amount} off for first {period}.": "Snižena cijena {amount} za prvih {period}",
-    "{amount} off forever.": "Snižena cijena zauvijek",
+    "{amount} off forever.": "{amount} popusta zauvijek.",
     "{discount}% discount": "{discount}% popusta",
     "{memberEmail} will no longer receive {newsletterName} newsletter.": "{memberEmail} više neće primati {newsletterName} newsletter.",
     "{memberEmail} will no longer receive emails when someone replies to your comments.": "{memberEmail} više neće primati e-poštu kada netko odgovori na vaš komentar.",
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "E-pošta",
     "Emails disabled": "Isključena e-pošta",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "",
     "Enter your name": "",
     "Error": "Greška",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "",
     "Failed to update subscription, please try again": "",
     "Forever": "Zauvijek",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Potražite pomoć",
     "Get in touch for help": "Kontaktirajte nas za pomoć",
     "Get notified when someone replies to your comment": "Budite obaviješteni ako netko odgovori na vaš komentar:",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "",
     "Thanks for the feedback!": "Hvala na povratnim informacijama!",
     "That didn't go to plan": "Nešto je pošlo po zlu",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Došlo je do problema sa slanjem vaše poruke. Pokušajte ponovno malo kasnije.",
     "There was an error cancelling your subscription, please try again.": "",
     "There was an error continuing your subscription, please try again.": "",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "",
     "Too many different sign-in attempts, try again in {number} minutes": "",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Otključajte pristup svim newsletterima plaćanjem pretplate.",
     "Unsubscribe from all emails": "Otkažite primanje svih poruka e-poštom",
