--- a/ghost/i18n/locales/hu/portal.json
+++ b/ghost/i18n/locales/hu/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "E-mailek",
     "Emails disabled": "E-mailek kikapcsolva",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Add meg az e-mail-címed",
     "Enter your name": "Neved",
     "Error": "Hiba",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Nem sikerült frissíteni a hírlevél beállításokat",
     "Failed to update subscription, please try again": "Nem sikerült frissíteni az előfizetést. Kérjük, próbáld újra",
     "Forever": "Örökké",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Segítséget kérek",
     "Get in touch for help": "Írj nekünk",
     "Get notified when someone replies to your comment": "Értesítést kérek, ha valaki válaszol a hozzászólásaimra",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Köszönjük a támogatásodat!",
     "Thanks for the feedback!": "Köszönjük a visszajelzést!",
     "That didn't go to plan": "Hiba történt",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Probléma volt a visszajelzés küldésénél. Kérjük, próbáld újra kicsit később.",
     "There was an error cancelling your subscription, please try again.": "Hiba történt az előfizetés lemondásánál. Kérjük, próbáld újra.",
     "There was an error continuing your subscription, please try again.": "Hiba történt az előfizetés folytatatásának kérésekor. Kérjük, próbáld újra.",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "Túl sok, különböző bejelentkezési kísérlet történt, próbáld meg újra ennyi óra múlva: {number}",
     "Too many different sign-in attempts, try again in {number} minutes": "Túl sok, különböző bejelentkezési kísérlet történt, próbáld meg újra ennyi perc múlva: {number}",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Nem sikerült elindítani a fizetési munkamenetet",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Előfizetéssel az összes hírlevélhez hozzáférsz.",
     "Unsubscribe from all emails": "Leiratkozás minden e-mailről",
