--- a/ghost/i18n/locales/pl/portal.json
+++ b/ghost/i18n/locales/pl/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "Zaktualizowano preferencje email.",
     "Emails": "Emaile",
     "Emails disabled": "Wysyłanie emaili zablokowane",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Wpisz swój adres email",
     "Enter your name": "Wpisz swoje imię",
     "Error": "Błąd",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Nie udało się zaktualizować ustawień newslettera",
     "Failed to update subscription, please try again": "Nie udało się zaktualizować subskrypcji. Spróbuj ponownie",
     "Forever": "Na zawsze",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Uzyskaj pomoc",
     "Get in touch for help": "Skontaktuj się, aby uzyskać pomoc",
     "Get notified when someone replies to your comment": "Otrzymaj powiadomienie, gdy ktoś odpowie na Twój komentarz",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Dziękujemy za Twoje wsparcie!",
     "Thanks for the feedback!": "Dziękujemy za ocenę!",
     "That didn't go to plan": "Coś poszło nie tak",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Wystąpił problem z przesyłaniem opinii. Spróbuj ponownie nieco później.",
     "There was an error cancelling your subscription, please try again.": "Wystąpił błąd podczas anulowania subskrypcji. Spróbuj ponownie.",
     "There was an error continuing your subscription, please try again.": "Wystąpił błąd podczas kontynuowania subskrypcji. Spróbuj ponownie.",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "Zbyt wiele różnych prób logowania. Spróbuj ponownie za {number} godzin",
     "Too many different sign-in attempts, try again in {number} minutes": "Zbyt wiele różnych prób logowania. Spróbuj ponownie za {number} minut",
     "Too many sign-up attempts, try again later": "Zbyt wiele prób rejestracji, spróbuj ponownie później",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Nie można zainicjować sesji realizacji zakupu",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Zostań płatnym subskrybentem i odblokuj dostęp do wszystkich biuletynów.",
     "Unsubscribe from all emails": "Wypisz się w wszystkich emaili",
