--- a/ghost/i18n/locales/sk/portal.json
+++ b/ghost/i18n/locales/sk/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "Nastavenia emailu aktualizované",
     "Emails": "E-maily",
     "Emails disabled": "E-maily vypnuté",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Zadajte svoju e-mailovú adresu",
     "Enter your name": "Zadajte svoje meno",
     "Error": "Chyba",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Nepodarilo sa aktualizovať nastavenia newslettera",
     "Failed to update subscription, please try again": "Zlyhala aktualizácia odberu, prosím skúste to znova.",
     "Forever": "Navždy",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Získať pomoc",
     "Get in touch for help": "Obrátiť sa na pomoc",
     "Get notified when someone replies to your comment": "Dostávať upozornenie, ak niekto odpíše na komentár",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Ďakujeme za Vašu podporu!",
     "Thanks for the feedback!": "Ďakujeme za spätnú väzbu!",
     "That didn't go to plan": "Niečo sa nepodarilo",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Nepodarilo sa odoslať váš feedback. Prosím skúste to neskôr.",
     "There was an error cancelling your subscription, please try again.": "Pri zrušení vášho predplatného došlo k chybe, skúste to prosím znova.",
     "There was an error continuing your subscription, please try again.": "Pri predĺžení vášho predplatného sa vyskytla chyba, prosím skúste to znovu",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "Príliš veľa pokusov o prihlásenie, skúste to znova o {number} hodín.",
     "Too many different sign-in attempts, try again in {number} minutes": "Príliš veľa pokusov o prihlásenie, skúste to znova o {number} minút.",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Nie je možné spustiť reláciu pre platbu",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Odomknite si prístup ku všetkým newsletterom, ak sa stanete plateným predplatiteľom.",
     "Unsubscribe from all emails": "Odhlásiť sa z odberu všetkých emailov",
