--- a/ghost/i18n/locales/sq/portal.json
+++ b/ghost/i18n/locales/sq/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "Emailet",
     "Emails disabled": "Emailet e çaktivizuara",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "",
     "Enter your name": "",
     "Error": "Gabim",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "",
     "Failed to update subscription, please try again": "",
     "Forever": "Pergjithmone",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Merr ndihme",
     "Get in touch for help": "Kontaktoni për ndihmë",
     "Get notified when someone replies to your comment": "",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "",
     "Thanks for the feedback!": "Faleminderit per komentin!",
     "That didn't go to plan": "Kjo nuk shkoi sipas planit",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Pati një problem me dërgimin e komenteve tuaja. Ju lutemi provoni sërish pak më vonë.",
     "There was an error cancelling your subscription, please try again.": "",
     "There was an error continuing your subscription, please try again.": "",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "",
     "Too many different sign-in attempts, try again in {number} minutes": "",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Zhbllokoni aksesin per te gjitha buletinet duke u bere nje abonues me pagese.",
     "Unsubscribe from all emails": "Çregjistrohu nga të gjitha emailet",
