--- a/ghost/i18n/locales/sv/portal.json
+++ b/ghost/i18n/locales/sv/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "E-postmeddelanden",
     "Emails disabled": "E-post inaktiverad",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Skriv din e-postadress",
     "Enter your name": "Skriv ditt namn",
     "Error": "Fel",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Misslyckades med att uppdatera inställningar för nyhetsbrev",
     "Failed to update subscription, please try again": "Misslyckades med att uppdatera prenumeration, vänligen försök igen",
     "Forever": "Tillsvidare",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Få hjälp",
     "Get in touch for help": "Kontakta oss för hjälp",
     "Get notified when someone replies to your comment": "Få en avisering när någon svarar på din kommentar",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Tack för ditt stöd!",
     "Thanks for the feedback!": "Tack för din feedback!",
     "That didn't go to plan": "Det där fungerade inte som tänkt",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Det fungerande inte att skicka in din feedbak. Försök igen lite senare.",
     "There was an error cancelling your subscription, please try again.": "Det blev fel när din prenumeration skulle avbrytas, vänligen försök igen",
     "There was an error continuing your subscription, please try again.": "Det blev fel när din prenumeration skulle fortsättas, vänligen försök igen",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "För många olika inloggningsförsök, testa igen om {number} timmar.",
     "Too many different sign-in attempts, try again in {number} minutes": "För många olika inloggningsförsök, testa igen om {number} minuter.",
     "Too many sign-up attempts, try again later": "För många olika registreringsförsök, prova igen senare.",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Kan inte initiera utcheckningssession",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Få tillgång till alla nyhetsbrev genom att bli betalande prenumerant",
     "Unsubscribe from all emails": "Avregistrera från alla e-postutskick",
