--- a/ghost/i18n/locales/tr/portal.json
+++ b/ghost/i18n/locales/tr/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "E-posta tercihleri \u200b\u200bgüncellendi.",
     "Emails": "E-postalar",
     "Emails disabled": "E-postalar devre dışı",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "E-posta adresinizi girin",
     "Enter your name": "Adınızı girin",
     "Error": "Hata",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Bülten ayarları güncellenemedi",
     "Failed to update subscription, please try again": "Abonelik güncellenemedi, lütfen tekrar deneyin",
     "Forever": "Süresiz",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Yardım al",
     "Get in touch for help": "Yardım için iletişime geçin",
     "Get notified when someone replies to your comment": "Birisi yorumuna cevap yazdığında bildirim al",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Desteğiniz için teşekkür ederiz!",
     "Thanks for the feedback!": "Geri bildirim için teşekkürler!",
     "That didn't go to plan": "Bir şeyler ters gitti",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Geri bildiriminiz gönderilirken bir sorun oluştu. Lütfen biraz sonra tekrar deneyin.",
     "There was an error cancelling your subscription, please try again.": "Aboneliğiniz iptal edilirken bir hata oluştu, lütfen tekrar deneyin.",
     "There was an error continuing your subscription, please try again.": "Aboneliğinizi devam ettirirken bir hata oluştu, lütfen tekrar deneyin.",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "Çok fazla farklı giriş denemesi yapıldı, lütfen {number} saat sonra tekrar deneyin",
     "Too many different sign-in attempts, try again in {number} minutes": "Çok fazla farklı giriş denemesi yapıldı, lütfen {number} dakika sonra tekrar deneyin",
     "Too many sign-up attempts, try again later": "Çok fazla kayıt denemesi yapıldı, daha sonra tekrar deneyin",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Ödeme oturumu başlatılamadı",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Tüm bültenlere erişimi açmak için ücretli bir abone olun.",
     "Unsubscribe from all emails": "Tüm e-postaların aboneliğinden çık",
