--- a/ghost/i18n/locales/uk/portal.json
+++ b/ghost/i18n/locales/uk/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "Електронні листи",
     "Emails disabled": "Електронна пошта вимкнена",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Введіть свій імейл",
     "Enter your name": "Введіть імʼя",
     "Error": "Помилка",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Не вдалося оновити налаштування розсилки",
     "Failed to update subscription, please try again": "Не вдалося оновити підписку, повторіть спробу",
     "Forever": "Назавжди",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Отримати допомогу",
     "Get in touch for help": "Звертайтесь по допомогу",
     "Get notified when someone replies to your comment": "Отримувати повідомлення коли хтось відповість на твій коментар",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Дякуємо за підтримку!",
     "Thanks for the feedback!": "Дякуємо за відгук!",
     "That didn't go to plan": "Щось пішло не так",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Під час надсилання відгуку виникла проблема. Спробуйте ще раз трохи пізніше.",
     "There was an error cancelling your subscription, please try again.": "Під час скасування вашої підписки сталася помилка. Спробуйте ще раз.",
     "There was an error continuing your subscription, please try again.": "Під час продовження підписки сталася помилка. Спробуйте ще раз.",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "Забагато різних спроб входу. Повторіть спробу через {number} годин",
     "Too many different sign-in attempts, try again in {number} minutes": "Забагато різних спроб входу. Повторіть спробу через {number} хвилин",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Не вдалося розпочати сеанс оформлення замовлення",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Розблокуйте доступ до всіх розсилок, ставши платним підписником.",
     "Unsubscribe from all emails": "Відписатись від усіх листів",
