--- a/ghost/i18n/locales/vi/portal.json
+++ b/ghost/i18n/locales/vi/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "Đã cập nhật thiết lập gửi email.",
     "Emails": "Email",
     "Emails disabled": "Vô hiệu hóa email",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Nhập địa chỉ email của bạn",
     "Enter your name": "Nhập tên của bạn",
     "Error": "Lỗi",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Không thể cập nhật thiết lập bản tin email",
     "Failed to update subscription, please try again": "Không thể cập nhật gói, vui lòng thử lại",
     "Forever": "Vĩnh viễn",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Trợ giúp",
     "Get in touch for help": "Yêu cầu trợ giúp",
     "Get notified when someone replies to your comment": "Thông báo khi có ai đó trả lời bình luận",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Cảm ơn bạn đã ủng hộ!",
     "Thanks for the feedback!": "Cám ơn phản hồi của bạn!",
     "That didn't go to plan": "Không thực hiện được",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Có vấn đề khi gửi phản hồi. Hãy thử lại sau.",
     "There was an error cancelling your subscription, please try again.": "Xảy ra lỗi khi hủy gói thành viên, vui lòng thử lại",
     "There was an error continuing your subscription, please try again.": "Xảy ra lỗi khi tiếp tục gói thành viên, vui lòng thử lại",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "Thử đăng nhập quá nhiều, hãy thử lại sau {number} giờ.",
     "Too many different sign-in attempts, try again in {number} minutes": "Thử đăng nhập quá nhiều, hãy thử lại sau {number} phút.",
     "Too many sign-up attempts, try again later": "Thử đăng ký quá nhiều, hãy thử lại sau",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Không thể bắt đầu phiên thanh toán",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Trở thành thành viên trả phí để mở khóa truy cập toàn bộ bản tin email.",
     "Unsubscribe from all emails": "Hủy nhận tất cả email",
