--- a/ghost/i18n/locales/et/portal.json
+++ b/ghost/i18n/locales/et/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "E-kirjad",
     "Emails disabled": "E-kirjad keelatud",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Sisestage oma e-posti aadress",
     "Enter your name": "Sisestage oma nimi",
     "Error": "Viga",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "",
     "Failed to update subscription, please try again": "",
     "Forever": "Igavesti",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Hangi abi",
     "Get in touch for help": "Võta ühendust abi saamiseks",
     "Get notified when someone replies to your comment": "Saa teavitus, kui keegi vastab sinu kommentaarile",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Täname teid toetuse eest!",
     "Thanks for the feedback!": "Täname tagasiside eest!",
     "That didn't go to plan": "See ei läinud plaanipäraselt",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Teie tagasiside esitamisel tekkis probleem. Palun proovige natuke hiljem uuesti.",
     "There was an error cancelling your subscription, please try again.": "",
     "There was an error continuing your subscription, please try again.": "",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "",
     "Too many different sign-in attempts, try again in {number} minutes": "",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Avage juurdepääs kõigile uudiskirjadele, hakates tasuliseks tellijaks.",
     "Unsubscribe from all emails": "Tühista kõikide e-kirjade tellimus",
