--- a/ghost/i18n/locales/fa/portal.json
+++ b/ghost/i18n/locales/fa/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "ایمیل\u200cها",
     "Emails disabled": "ایمیل\u200cها غیرفعال هستند",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "",
     "Enter your name": "",
     "Error": "خطا",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "",
     "Failed to update subscription, please try again": "",
     "Forever": "برای همیشه",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "پشتیبانی بگیرید",
     "Get in touch for help": "برای دریافت پشتیبانی تماس بگیرید",
     "Get notified when someone replies to your comment": "زمانی که کسی به دیدگاه شما پاسخی می\u200cدهد، اعلان دریافت کنید",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "",
     "Thanks for the feedback!": "با سپاس از بازخورد شما!",
     "That didn't go to plan": "کار به درستی پیش نرفت",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "خطائی در زمان ثبت بازخورد شما اتفاق افتاد. خواهشمند است دوباره تلاش کنید.",
     "There was an error cancelling your subscription, please try again.": "",
     "There was an error continuing your subscription, please try again.": "",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "",
     "Too many different sign-in attempts, try again in {number} minutes": "",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "",
     "Unlock access to all newsletters by becoming a paid subscriber.": "با دریافت اشتراک پولی به شما دسترسی به تمامی خبرنامه\u200cها داده می\u200cشود.",
     "Unsubscribe from all emails": "لغو اشتراک دریافت تمامی ایمیل\u200cها",
