--- a/ghost/i18n/locales/fi/portal.json
+++ b/ghost/i18n/locales/fi/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "Sähköpostit",
     "Emails disabled": "Sähköpostit pois käytöstä",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "",
     "Enter your name": "",
     "Error": "Virhe",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "",
     "Failed to update subscription, please try again": "",
     "Forever": "Ikuisesti",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Pyydä apua",
     "Get in touch for help": "Ota yhteyttä saadaksesi apua",
     "Get notified when someone replies to your comment": "Saa viesti kun joku vastaa kommenttiisi",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "",
     "Thanks for the feedback!": "Kiitos palautteestasi!",
     "That didn't go to plan": "Tämä ei mennyt suunnitelmien mukaan",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Meillä oli ongelma palautteesi lähetyksen kanssa. Kokeleithan myöhemmin uudestaan.",
     "There was an error cancelling your subscription, please try again.": "",
     "There was an error continuing your subscription, please try again.": "",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "",
     "Too many different sign-in attempts, try again in {number} minutes": "",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Avaa pääsy kaikkiin uutiskirjeisiin maksullisella tilauksella.",
     "Unsubscribe from all emails": "Peruuta kaikki sähköpostit",
