--- a/ghost/i18n/locales/he/portal.json
+++ b/ghost/i18n/locales/he/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "מיילים",
     "Emails disabled": "מיילים מושבתים",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "כתבו את כתובת המייל שלכם",
     "Enter your name": "רשמו את השם שלכם",
     "Error": "שגיאה",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "עדכון הגדרות הניוזלטר נכשל",
     "Failed to update subscription, please try again": "עדכון המנוי נכשל, נסו שוב",
     "Forever": "לכל החיים",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "בקשו עזרה",
     "Get in touch for help": "צרו קשר לעזרה",
     "Get notified when someone replies to your comment": "קבלו התראה כאשר עונים לתגובה שלכם",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "תודה על התמיכה שלכם!",
     "Thanks for the feedback!": "תודה על הפידבק!",
     "That didn't go to plan": "זה לא הלך כמתוכנן",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "שגיאה בהגשת הפידבק שלכם. נסו שוב מאוחר יותר.",
     "There was an error cancelling your subscription, please try again.": "שגיאה בביטול המנוי שלכם, נסו שוב.",
     "There was an error continuing your subscription, please try again.": "שגיאה בהמשך המנוי שלכם, נסו שוב.",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "יותר מדי ניסיונות כניסה שונים, נסו שוב בעוד {number} שעות",
     "Too many different sign-in attempts, try again in {number} minutes": "יותר מדי ניסיונות כניסה שונים, נסו שוב בעוד {number} דקות",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "בעיה בהתחלת סשן קופה",
     "Unlock access to all newsletters by becoming a paid subscriber.": "פתחו גישה לכל הניוזלטרים על ידי הפכתכם למנוי בתשלום.",
     "Unsubscribe from all emails": "הסירו את המנוי מכל המיילים",
