--- a/ghost/i18n/locales/is/portal.json
+++ b/ghost/i18n/locales/is/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "Netföng",
     "Emails disabled": "Netföng gerð óvirk",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "",
     "Enter your name": "",
     "Error": "Villa",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "",
     "Failed to update subscription, please try again": "",
     "Forever": "Að eilífu",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Fá aðstoð",
     "Get in touch for help": "Hafðu samband til að fá aðstoð",
     "Get notified when someone replies to your comment": "Fá tilkynningu þegar einhver svarar ummælum þínum",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "",
     "Thanks for the feedback!": "Takk fyrir endurgjöfina!",
     "That didn't go to plan": "Þetta fór ekki samkvæmt áætlun",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Villa kom upp við sendingu athugasemdar. Vinsamlegast reynið aftur örlítið síðar.",
     "There was an error cancelling your subscription, please try again.": "",
     "There was an error continuing your subscription, please try again.": "",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "",
     "Too many different sign-in attempts, try again in {number} minutes": "",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Fáðu aðgang að öllum fréttabréfum með því að gerast áskrifandi.",
     "Unsubscribe from all emails": "Segja upp öllum tölvupóstum",
