--- a/ghost/i18n/locales/nb/portal.json
+++ b/ghost/i18n/locales/nb/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "E-postinnstillinger oppdatert",
     "Emails": "E-poster",
     "Emails disabled": "E-poster deaktivert",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "Oppgi din e-postadresse",
     "Enter your name": "Oppgi navnet ditt",
     "Error": "Feil",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Kunne ikke oppdatere nyhetsbrevinnstillinger",
     "Failed to update subscription, please try again": "Kunne ikke oppdatere abonnement, vennligst prøv igjen",
     "Forever": "For alltid",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Få hjelp",
     "Get in touch for help": "Kontakt for hjelp",
     "Get notified when someone replies to your comment": "Få varsel når noen svarer på kommentaren din",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "Takk for din støtte!",
     "Thanks for the feedback!": "Takk for tilbakemeldingen!",
     "That didn't go to plan": "Det gikk ikke som planlagt",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Det oppstod en feil. Vennligst prøv igjen senere.",
     "There was an error cancelling your subscription, please try again.": "En feil oppstod ved kansellering av abonnementet, vennligst prøv igjen.",
     "There was an error continuing your subscription, please try again.": "En feil oppstod ved fornyelse av abonnementet, vennligst prøv igjen.",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "For mange påloggingsforsøk, prøv igjen om {number} timer.",
     "Too many different sign-in attempts, try again in {number} minutes": "For mange påloggingsforsøk, prøv igjen om {number} minutter.",
     "Too many sign-up attempts, try again later": "For mange registreringsforsøk, prøv igjen senere",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "Kunne ikke starte utsjekkingssesjon",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Få tilgang til alle nyhetsbrev ved å bli betalende abonnent.",
     "Unsubscribe from all emails": "Meld deg av alle e-poster",
