--- a/ghost/i18n/locales/sw/portal.json
+++ b/ghost/i18n/locales/sw/portal.json
@@ -63,7 +63,7 @@
     "Email preferences updated.": "",
     "Emails": "Barua pepe",
     "Emails disabled": "Barua pepe zimezimwa",
-    "Ends offerEndDate}": "",
+    "Ends {offerEndDate}": "",
     "Enter your email address": "",
     "Enter your name": "",
     "Error": "Hitilafu",
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "",
     "Failed to update subscription, please try again": "",
     "Forever": "Milele",
-    "Free Trial – Ends trialEnd}": "",
+    "Free Trial – Ends {trialEnd}": "",
     "Get help": "Pata msaada",
     "Get in touch for help": "Wasiliana kupata msaada",
     "Get notified when someone replies to your comment": "Pata taarifa wakati mtu anapojibu maoni yako",
@@ -162,7 +162,7 @@
     "Thank you for your support!": "",
     "Thanks for the feedback!": "Asante kwa maoni!",
     "That didn't go to plan": "Hiyo haikwenda kama ilivyopangwa",
-    "The email address we have for you is memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
+    "The email address we have for you is {memberEmail} — if that's not correct, you can update it in your <button>account settings area</button>.": "",
     "There was a problem submitting your feedback. Please try again a little later.": "Kulikuwa na tatizo la kutuma maoni yako. Tafadhali jaribu tena baadaye kidogo.",
     "There was an error cancelling your subscription, please try again.": "",
     "There was an error continuing your subscription, please try again.": "",
@@ -180,7 +180,7 @@
     "Too many different sign-in attempts, try again in {number} hours": "",
     "Too many different sign-in attempts, try again in {number} minutes": "",
     "Too many sign-up attempts, try again later": "",
-    "Try free for amount} days, then {originalPrice}.": "",
+    "Try free for {amount} days, then {originalPrice}.": "",
     "Unable to initiate checkout session": "",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Fungua ufikiaji wa majarida yote kwa kuwa mwanachama anayelipa.",
     "Unsubscribe from all emails": "Jiondoe kwenye barua pepe zote",
