--- a/ghost/i18n/locales/de/portal.json
+++ b/ghost/i18n/locales/de/portal.json
@@ -145,7 +145,7 @@
     "Sorry, no recommendations are available right now.": "Entschuldige, aktuell sind keine Empfehlungen verfügbar.",
     "Sorry, that didn’t work.": "Entschuldige, das hat nicht funktioniert.",
     "Spam complaints": "Spam-Beschwerden",
-    "Start {amount}-day free trial": "Auswählen {amount}",
+    "Start {amount}-day free trial": "Auswählen",
     "Starting {startDate}": "Beginnt am {startDate}",
     "Starting today": "Beginnt heute",
     "Submit feedback": "Feedback senden",
