--- a/ghost/i18n/locales/sv/portal.json
+++ b/ghost/i18n/locales/sv/portal.json
@@ -81,7 +81,7 @@
     "Failed to update newsletter settings": "Misslyckades med att uppdatera inställningar för nyhetsbrev",
     "Failed to update subscription, please try again": "Misslyckades med att uppdatera prenumeration, vänligen försök igen",
     "Forever": "Tillsvidare",
-    "Free Trial – Ends {trialEnd}": "Gratispepriod – slutar {trialEnd}",
+    "Free Trial – Ends {trialEnd}": "Gratisperiod – slutar {trialEnd}",
     "Get help": "Få hjälp",
     "Get in touch for help": "Kontakta oss för hjälp",
     "Get notified when someone replies to your comment": "Få en avisering när någon svarar på din kommentar",
